# FastAPI-social-networking

./: .gitignore  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0e43ea3b31da_create_inital_tables.py
api/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
api/router/: auth.py  post.py  user.py  vote.py
